--- a/index.html
+++ b/index.html
@@ -173,6 +173,88 @@
   </div>
 </section>
 
-  <script src="script.js"></script>
+
+<!-- contact section  -->
+<section class="contact-section">
+  <div class="contact-container">
+    <h1>HAVE QUESTIONS?</h1>
+    <h2>WE’LL GIVE YOU A CALL</h2>
+
+    <form class="contact-form">
+      <div class="form-row">
+        <div class="form-group">
+          <label for="first-name">Name <span>(required)</span></label>
+          <input type="text" id="first-name" placeholder="First Name" required>
+        </div>
+        <div class="form-group">
+          <label for="last-name">&nbsp;</label>
+          <input type="text" id="last-name" placeholder="Last Name">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input type="tel" id="phone" placeholder="Phone Number">
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address <span>(required)</span></label>
+        <input type="email" id="email" placeholder="Email Address" required>
+      </div>
+
+      <button type="submit" class="submitt-btnn">SUBMIT</button>
+    </form>
+  </div>
+</section>
+
+
+
+
+<!-- footer  -->
+
+<footer class="farhanpharma-footer">
+  <div class="footer-content">
+    <div class="footer-about">
+      <h2>Rely <span>Tailors</span></h2>
+      <p>Crafting elegance through bespoke tailoring. From everyday wear to occasion attire, designed to fit your style perfectly.</p>
+      <div class="footer-address">
+        <p><i class="fa-solid fa-location-dot"></i> RELY TAILORS
+        <br>Purana Bazar, Hawrah Motor, HGM Road, Dhanbad 📍</p>
+        <p><i class="fa-solid fa-phone"></i> +971 55 555 5555</p>
+        <p><i class="fa-solid fa-envelope"></i> info@relytailors.com</p>
+      </div>
+    </div>
+
+    <div class="footer-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Our Collection</a></li>
+        <li><a href="#">Book Appointment</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-social">
+      <h3>Follow Us</h3>
+      <div class="social-icons">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <p class="dev-credit">Developer Credit<br><br><span>Tabish Farhan</span></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    &copy; 2025 RelyTailors. All rights reserved.
+  </div>
+</footer>
+
+
+
+
+<script src="script.js"></script>
 </body>
 </html>
