--- a/index.html
+++ b/index.html
@@ -57,6 +57,65 @@
 
 
 
+<section>
+  <h2 class="bespoke">Bespoke from head to toe</h2>
+
+  <div class="section">
+    <button class="scroll-btn left" onclick="scrollSection(this, -1)">&#8249;</button>
+    <div class="scroll-container">
+      
+      <a href="custom-suits.html" class="item">
+        <img src="assets/suit1.jpg" alt="Custom Suit">
+        <img class="hover-img" src="assets/suit4.jpg" alt="Custom Suit Side">
+        <p>Custom Suits</p>
+      </a>
+
+      <a href="prince-suit.html" class="item">
+        <img src="assets/prince1.jpg" alt="Prince suit">
+        <img class="hover-img" src="assets/prince2.jpg" alt="Prince Suit Side">
+        <p>Prince Suit</p>
+      </a>
+
+      <a href="custom-shirts.html" class="item">
+        <img src="assets/shirt1.jpg" alt="Custom Shirt">
+        <img class="hover-img" src="assets/shirt2 (2).jpg" alt="Custom Shirt Side">
+        <p>Custom Shirts</p>
+      </a>
+
+      <a href="wedding.html" class="item">
+        <img src="assets/wedding1.jpg" alt="Wedding Suit">
+        <img class="hover-img" src="assets/wedding2.jpg" alt="Wedding Suit Side">
+        <p>Wedding</p>
+      </a>
+
+      <a href="polo-shirts.html" class="item">
+        <img src="assets/polo1.jpg" alt="Polo Shirt">
+        <img class="hover-img" src="assets/polo2.jpg" alt="Polo Shirt Side">
+        <p>Polo Shirts</p>
+      </a>
+
+      <a href="indo-western.html" class="item">
+        <img src="assets/sherwani1.jpg" alt="Indo-western Suit">
+        <img class="hover-img" src="assets/sherwani2.jpg" alt="Indo-western Suit Side">
+        <p>Indo-Western Suits</p>
+      </a>
+
+      <a href="kurta.html" class="item">
+        <img src="assets/kurta1.jpg" alt="Kurta Suit">
+        <img class="hover-img" src="assets/kurta2.jpg" alt="Kurta Suit Side">
+        <p>Kurta</p>
+      </a>
+
+      <a href="blazers.html" class="item">
+        <img src="assets/blazer.jpg" alt="Blazer">
+        <img class="hover-img" src="assets/blazer2.jpg" alt="Blazer Side">
+        <p>Blazers</p>
+      </a>
+
+    </div>
+    <button class="scroll-btn right" onclick="scrollSection(this, 1)">&#8250;</button>
+  </div>
+</section>
 
 
 
@@ -81,6 +140,7 @@
   </div>
 </section>
 
+ 
 
 
 
