--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Logo -->
-    <div class="logo"><a href="#">RELYTAILORS</a></div>
+    <div class="logo"><a href="index.html">RELYTAILORS</a></div>
 
     <!-- Login & Cart -->
     <div class="right-icons">
@@ -40,7 +40,7 @@
   <!-- Navigation Menu -->
   <nav class="nav-bar">
     <ul class="nav-list" id="navLinks">
-      <li><a href="#">SUITS</a></li>
+      <li><a href="pages/suits.html">SUITS</a></li>
       <li><a href="#">BLAZERS</a></li>
       <li><a href="#">PANTS</a></li>
       <li><a href="#">SHIRTS</a></li>
@@ -71,7 +71,7 @@
     <button class="scroll-btn left" onclick="scrollSection(this, -1)">&#8249;</button>
     <div class="scroll-container">
       
-      <a href="custom-suits.html" class="item">
+      <a href="pages/suits.html" class="item">
         <img src="assets/suit1.jpg" alt="Custom Suit">
         <img class="hover-img" src="assets/suit4.jpg" alt="Custom Suit Side">
         <p>Custom Suits</p>
