done with suit section

--- a/pages/suits.html
+++ b/pages/suits.html
@@ -68,136 +68,136 @@
   </div>
 </section>
 
-
 <!-- Suits Collection Section -->
 <section class="suits-collection">
   <h2 class="collection-title">Our Exclusive Suits Collection</h2>
-  <div class="suits-grid">
 
-    <!-- Looping suits -->
+  <div class="suits-grid">
+    <!-- First 9 visible suits -->
     <div class="suit-card">
       <div class="suit-image">
-        <img src="../assets/suit1.png" alt="Beige Formal Suit">
+        <img src="../assets/suit1.png" alt="Royal Blue Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart('Beige Formal Suit')">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Royal Blue Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Classic Beige Suit</p>
-        <span>$450</span>
+        <p>Royal Blue Suit</p>
+        <span>$350</span>
       </div>
     </div>
 
     <div class="suit-card">
       <div class="suit-image">
-        <img src="../assets/suit2.png" alt="Casual Beige Jacket">
+        <img src="../assets/suit2.png" alt="Classic Black Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart('Casual Beige Jacket')">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Classic Black Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Casual Beige Jacket</p>
+        <p>Classic Black Suit</p>
+        <span>$300</span>
+      </div>
+    </div>
+
+    <div class="suit-card">
+      <div class="suit-image">
+        <img src="../assets/suit3 .png" alt="Grey Slim Fit Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Grey Slim Fit Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Grey Slim Fit Suit</p>
+        <span>$320</span>
+      </div>
+    </div>
+
+    <div class="suit-card">
+      <div class="suit-image">
+        <img src="../assets/suit4.png" alt="Navy Blue 3-Piece Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Navy Blue 3-Piece Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Navy Blue 3-Piece Suit</p>
+        <span>$400</span>
+      </div>
+    </div>
+
+    <div class="suit-card">
+      <div class="suit-image">
+        <img src="../assets/suit5.png" alt="Charcoal Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Charcoal Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Charcoal Business Suit</p>
         <span>$380</span>
       </div>
     </div>
 
     <div class="suit-card">
       <div class="suit-image">
-        <img src="../assets/suit3 .png" alt="Grey Checked Blazer">
+        <img src="../assets/suit6.png" alt="Brown Formal Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Brown Formal Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Grey Checked Blazer</p>
+        <p>Brown Formal Suit</p>
+        <span>$360</span>
+      </div>
+    </div>
+
+    <div class="suit-card">
+      <div class="suit-image">
+        <img src="../assets/suit7.png" alt="Maroon Wedding Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Maroon Wedding Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Maroon Wedding Suit</p>
         <span>$420</span>
       </div>
     </div>
 
-    <!-- Add More Suits -->
     <div class="suit-card">
       <div class="suit-image">
-        <img src="suit4.jpg" alt="Navy Blue Suit">
+        <img src="../assets/suit8.png" alt="Beige Summer Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Beige Summer Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Navy Blue Suit</p>
-        <span>$480</span>
+        <p>Beige Summer Suit</p>
+        <span>$340</span>
       </div>
     </div>
 
     <div class="suit-card">
       <div class="suit-image">
-        <img src="suit5.jpg" alt="Charcoal Business Suit">
+        <img src="../assets/suit9.png" alt="Olive Green Casual Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Olive Green Casual Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Charcoal Business Suit</p>
-        <span>$500</span>
+        <p>Olive Green Casual Suit</p>
+        <span>$310</span>
       </div>
     </div>
 
-    <div class="suit-card">
+    <!-- Hidden suits (initially hidden) -->
+    <!-- Just add class 'hidden-suit' to hide them -->
+    <div class="suit-card hidden-suit">
       <div class="suit-image">
-        <img src="suit6.jpg" alt="Slim Fit Grey Suit">
+        <img src="../assets/suit10.png" alt="Brown Checked Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        </div>
-      </div>
-      <div class="suit-info">
-        <p>Slim Fit Grey Suit</p>
-        <span>$440</span>
-      </div>
-    </div>
-
-    <div class="suit-card">
-      <div class="suit-image">
-        <img src="suit7.jpg" alt="Wedding White Suit">
-        <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        </div>
-      </div>
-      <div class="suit-info">
-        <p>Wedding White Suit</p>
-        <span>$600</span>
-      </div>
-    </div>
-
-    <div class="suit-card">
-      <div class="suit-image">
-        <img src="suit8.jpg" alt="Double Breasted Navy Suit">
-        <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        </div>
-      </div>
-      <div class="suit-info">
-        <p>Double Breasted Navy</p>
-        <span>$520</span>
-      </div>
-    </div>
-
-    <div class="suit-card">
-      <div class="suit-image">
-        <img src="suit9.jpg" alt="Classic Black Tuxedo">
-        <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        </div>
-      </div>
-      <div class="suit-info">
-        <p>Classic Black Tuxedo</p>
-        <span>$650</span>
-      </div>
-    </div>
-
-    <div class="suit-card">
-      <div class="suit-image">
-        <img src="suit10.jpg" alt="Brown Checked Suit">
-        <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Brown Checked Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
@@ -206,11 +206,11 @@
       </div>
     </div>
 
-    <div class="suit-card">
+    <div class="suit-card hidden-suit">
       <div class="suit-image">
-        <img src="suit11.jpg" alt="Grey Pinstripe Suit">
+        <img src="../assets/suit11.png" alt="Grey Pinstripe Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Grey Pinstripe Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
@@ -219,24 +219,227 @@
       </div>
     </div>
 
-    <div class="suit-card">
+    <!-- Add suit12 to suit24 similarly -->
+    <!-- Use same structure and apply class="suit-card hidden-suit" to each -->
+
+    <!-- Example for suit12 -->
+    <div class="suit-card hidden-suit">
       <div class="suit-image">
-        <img src="suit12.jpg" alt="Dark Blue Business Suit">
+        <img src="../assets/suit12.png" alt="Light Grey Business Suit">
         <div class="hover-overlay">
-          <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
         </div>
       </div>
       <div class="suit-info">
-        <p>Dark Blue Business Suit</p>
-        <span>$490</span>
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
       </div>
     </div>
 
+     <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit13.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+     <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit14.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+    <!-- Add remaining suit13 to suit24 here in same format -->
+
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit15.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit16.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit17.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit18.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit19.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit20.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit21.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit22.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+      <div class="suit-card hidden-suit">
+      <div class="suit-image">
+        <img src="../assets/suit23.png" alt="Light Grey Business Suit">
+        <div class="hover-overlay">
+          <button class="add-to-cart" onclick="addToCart('Light Grey Business Suit')">Add to Cart</button>
+        </div>
+      </div>
+      <div class="suit-info">
+        <p>Light Grey Business Suit</p>
+        <span>$390</span>
+      </div>
+    </div>
+  
+    
+
+ 
+</section>
+<!-- View All Button -->
+<div class="view-all-container">
+  <button id="view-all-btn" class="view-all-btn" onclick="showAllSuits()">View All</button>
+</div>
+<!-- hero section  -->
+<section class="tailor-hero">
+  <div class="overlay"></div>
+  <div class="hero-content">
+    <h1><span>Fit:</span> Because Every Detail Defines Your Presence</h1>
+    <p>
+      A well-tailored suit isn't just clothing—it's a statement. <br />
+      At Nutracon Tailors, we blend tradition with modern precision to sculpt garments
+      that fit like a second skin. Your journey to elegance starts with a single stitch.
+    </p>
+    <a href="#book" class="hero-btn">Book Your Private Fitting</a>
   </div>
 </section>
 
 <!-- Toast Notification -->
 <div id="toast"></div>
+
+
+<!-- footer  -->
+
+<footer class="farhanpharma-footer">
+  <div class="footer-content">
+    <div class="footer-about">
+      <h2>Rely <span>Tailors</span></h2>
+      <p>Crafting elegance through bespoke tailoring. From everyday wear to occasion attire, designed to fit your style perfectly.</p>
+      <div class="footer-address">
+        <p><i class="fa-solid fa-location-dot"></i> RELY TAILORS
+        <br>Purana Bazar, Hawrah Motor, HGM Road, Dhanbad 📍</p>
+        <p><i class="fa-solid fa-phone"></i> +971 55 555 5555</p>
+        <p><i class="fa-solid fa-envelope"></i> info@relytailors.com</p>
+      </div>
+    </div>
+
+    <div class="footer-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Our Collection</a></li>
+        <li><a href="#">Book Appointment</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-social">
+      <h3>Follow Us</h3>
+      <div class="social-icons">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+      <p class="dev-credit">Developer Credit<br><br><span>Tabish Farhan</span></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    &copy; 2025 RelyTailors. All rights reserved.
+  </div>
+</footer>
+
+
 <script src="../script.js"></script>
 </body>
 </html>
