made balzer section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <!-- Navigation Menu -->
   <nav class="nav-bar">
     <ul class="nav-list" id="navLinks">
-      <li><a href="pages/suits.html">SUITS</a></li>
-      <li><a href="#">BLAZERS</a></li>
-      <li><a href="#">PANTS</a></li>
+      <li><a href="pages/suits.html?type=suits">SUITS</a></li>
+      <li><a href="pages/suits.html?type=blazers">BLAZERS</a></li>
+      <li><a href="pages/suits.html?type=shirts">PANTS</a></li>
       <li><a href="#">SHIRTS</a></li>
       <li><a href="#">KURTAS</a></li>
       <li><a href="#">CONTACT</a></li>
