--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li><a href="#">SHIRTS</a></li>
       <li><a href="#">KURTAS</a></li>
       <li><a href="#">CONTACT</a></li>
-      <li><a href="#">ABOUT</a></li>
+      <li><a href="pages/about.html">ABOUT</a></li>
     </ul>
   </nav>
 </header>
